# verve-lang

./: .buildinfo  .gitignore  .gitmodules  .merlin  .travis.yml  AST.hs  Backend.hs  CNAME  IRGen.hs  LICENSE  Lexer.hs  Makefile  Parser.hs  README.md  ceos  ceos.cc  circle.yml  future.html  genindex.html  index.html  main.hs  objects.inv  opam  params.json  search.html  searchindex.js  verve  verve.cabal  verve.cc  verve.install  verve.sh
AST/: AST.hs  Decl.hs  Expr.hs  Literal.hs
_sources/: index.rst.txt
_sources/reference/: classes.rst.txt  enums.rst.txt  functions.rst.txt  generics.rst.txt  if.rst.txt  imports.rst.txt  match.rst.txt  primitives.rst.txt  records.rst.txt
_static/: prism-verve.js  prism.js  style.css
_static/css/: badge_only.css  badge_only.css.map  theme.css  theme.css.map
app/: Compile.hs  Env.hs  Main.hs  Options.hs  Repl.hs  Runners.hs  TypedValue.hs
ast/: clone.cc  nodes.cc  nodes.h  printer.cc  printer.h  visitor.cc  visitor.h
bytecode/: disassembler.cc  disassembler.h  generator.cc  generator.h  opcodes.h  sections.h
compiler/: Makefile  ast.h  benchmark  builtins.cc  builtins.ceos  builtins.h  ceos_string.cc  ceos_string.h  closure.h  function.cc  function.h  gc.cc  gc.h  generator.cc  generator.cpp  generator.h  interpreter.S  lexer.cc  lexer.cpp  lexer.h  macros.h  main.cc  main.cpp  old_scope.h  opcodes.h  parser.cc  parser.cpp  parser.h  scope.cc  scope.h  sections.h  string.h  token.h  type.h  value.h  vm.cc  vm.h
compiler/run_tests/: custom_function.ceos  fib.ceos  hof.ceos  if.ceos  if.out  math.ceos  math.out  print.ceos  print.out
compiler/tests/: allocation.ceos  call_with_call.in  call_with_call.out  call_with_ints.in  call_with_ints.out  char.ceos  comment.ceos  custom_function.ceos  defn.in  defn.out  empty_call.out  fib.ceos  hof.ceos  hof.out  if.ceos  if.in  if.out  interface.ceos  interface.out  lambda.ceos  list.ceos  math.ceos  math_parser.ceos  math_parser.out  print.ceos  thunk.ceos
docs/: Makefile  ad-hoc.rst  code.py  conf.py  future.rst  gadt.rst  index.rst  reference.rst  subtyping.rst
docs/_static/: prism.css  style.css
docs/_templates/: layout.html
docs/reference/: classes.rst  comments.rst  enums.rst  functions.rst  generics.rst  if.rst  imports.rst  index.rst  interfaces.rst  match.rst  operators.rst  primitives.rst  records.rst  type_aliases.rst  variables.rst
lib/: Std.vrv
parser/: ast.cc  ast.h  ast_clone.cc  ast_copy.cc  ast_printer.cc  ast_printer.h  ast_visitor.cc  ast_visitor.h  environment.cc  environment.h  lexer.cc  lexer.h  naming.cc  naming.h  parser.cc  parser.h  print_ast.cc  print_ast.h  scope.h  token.cc  token.h  type.cc  type.h  type_checker.cc  type_checker.h  type_error.h  type_helpers.cc  type_helpers.h
reference/: classes.html  comments.html  enums.html  functions.html  generics.html  if.html  imports.html  interfaces.html  match.html  operators.html  primitives.html  records.html  type_aliases.html  variables.html
resources/: grammar.cfg  grammar.ebnf  logo-v2.sketch  logo.sketch
runtime/: builtins.S  builtins.cc  builtins.ceos  builtins.h  builtins.v  ceos_string.h  closure.h  function.cc  function.h  gc.cc  gc.h  interpreter.S  prelude.vrv  scope.cc  scope.h  value.h  verve_string.cc  verve_string.h  vm.cc  vm.h
src/: AST.hs  Absyn.hs  Bind.hs  Bytecode.hs  BytecodeWriter.hs  CoreAbsyn.hs  Ctx.hs  DeSugar.hs  Desugar.hs  Error.hs  ErrorReporter.hs  Generator.hs  Interpreter.hs  Lexer.hs  Makefile  Naming.hs  Opcode.hs  Parser.hs  PrettyPrint.hs  Reassoc.hs  Renamer.hs  Section.hs  Type.hs  TypeChecker.hs  TypeError.hs  Types.hs  Verve.hs  _tags  ast.hs  bytecode.hs  bytecodewriter.hs  generator.hs  interpreter.ml  lexer.hs  main.hs  main.ml  naming.hs  naming.ml  parser.hs  repl.ml  (+5 more)
src/Absyn/: Base.h  Base.hs  Loc.hs  Meta.hs  Type.hs  Typed.hs  Untyped.hs  ValueOccursCheck.hs
src/Bytecode/: Compiler.hs  Encoder.hs  Opcodes.hs
src/Core/: Absyn.hs  Desugar.hs  Match.hs  Match.hs-boot  State.hs
src/Interpreter/: Builtin.hs  Env.hs  Env.hs-boot  Eval.hs  RuntimeError.hs  Value.hs
src/Lib/: Registry.hs
src/Reassoc/: Env.hs  Error.hs  Reassoc.hs
src/Renamer/: Env.hs  Error.hs  Renamer.hs  State.hs
src/Syntax/: Decl.hs  Expr.hs  Import.hs  Lexer.hs  Literal.hs  Parser.hs  Pattern.hs  Shared.hs  Stmt.hs  Stmt.hs-boot  Type.hs
src/Typing/: Constraint.hs  Ctx.hs  Ctx.hs-boot  Decl.hs  Env.hs  Expr.hs  Kinds.hs  State.hs  State.hs-boot  Stmt.hs  Stmt.hs-boot  Substitution.hs  Subtyping.hs  TypeChecker.hs  TypeError.hs  Types.hs  Util.hs  Variance.hs
src/Util/: Env.hs  Error.hs  PrettyPrint.hs  Scope.hs
src/interpreter/: eval.ml  rt_env.ml  runtime_error.ml  subst.ml  value.ml  value.mli
src/parsing/: absyn.ml  absyn.mli  lexer.mll  parser.mly  printer.ml  printer.mli
src/typing/: env.ml  env.mli  type_error.ml  types.ml  typing.ml  typing_decl.ml  typing_expr.ml
stylesheets/: stylesheet.css
tests/: allocation.ceos  allocation.out  allocation.vrv  allocation_obj.ceos  allocation_obj.out  call_vs_decl.ceos  call_vs_decl.v  call_vs_decl.vrv  char.ceos  comment.ceos  custom_function.ceos  custom_function.out  custom_type.ceos  custom_type.v  custom_type.vrv  fib.ceos  float.out  float.vrv  fn_generic_scoping.vrv  fn_multiple_impl.out  fn_multiple_impl.vrv  generic_function.ceos  generic_function.out  generics.vrv  hof.ceos  hof.out  hof.vrv  if.ceos  if.v  import.ceos  import.out  import.v  import.vrv  import_helper_1.ceos  import_helper_2.ceos  import_helper_2.v  import_helper_2.vrv  import_helper_3.ceos  interface.ceos  interface.out  (+34 more)
tests/bugs/: ad-hoc.vrv  soundness.vrv
tests/correct/: Class.vrv  Enum.vrv  Match.vrv  MathParser.vrv  TypeAlias.vrv  ad-hoc.vrv  ad-hoc.vrv-disabled  applications.vrv  builtins.vrv  builtins.vrv-disabled  enum.vrv  example.vrv  functions.vrv  generics.vrv  identities.vrv  if.vrv  if.vrv-disabled  imports.vrv  imports.vrv-disabled  lambda.vrv  let.vrv  let.vrv-disabled  literals.vrv  match.vrv  numbers.vrv  operators.vrv  (+10 more)
utils/: file.cc  file.h  macros.h  old_scope.h
vim/: ceos.vim
vm/: Makefile  main
(+113 files in other folders)
