name:                verve
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tadeuzagallo/verve-lang#readme
license:             MIT
license-file:        LICENSE
author:              Tadeu Zagallo
maintainer:          tadeuzagallo@gmail
copyright:           2017 Tadeu Zagallo
category:            programming-language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          lib/*.vrv

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-identities -Wmissing-exported-signatures -fno-warn-name-shadowing
  exposed-modules:     Parser
                       Absyn.Typed
                       Absyn.Untyped
                       Lexer
                       Interpreter
                       Error
                       Desugar
                       CoreAbsyn
                       Reassoc
                       Typing.Ctx
                       Typing.TypeChecker
                       Renamer
                       PrettyPrint

  other-modules:       Absyn.Base
                       Absyn.Meta
                       Typing.Constraint
                       Typing.Kinds
                       Typing.State
                       Typing.Substitution
                       Typing.Subtyping
                       Typing.TypeError
                       Typing.Types
                       Typing.Variance

  build-depends:       base >= 4.7 && < 5, parsec, mtl
  default-language:    Haskell2010

executable verve
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -Wall -Werror -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-identities -Wmissing-exported-signatures -fno-warn-name-shadowing
  build-depends:  base >= 4.7 && < 5, verve, haskeline, filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tadeuzagallo/verve
