name:                verve
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tadeuzagallo/verve-lang#readme
license:             MIT
license-file:        LICENSE
author:              Tadeu Zagallo
maintainer:          tadeuzagallo@gmail
copyright:           2017 Tadeu Zagallo
category:            programming-language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          lib/*.vrv

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-identities -Wmissing-exported-signatures -fno-warn-name-shadowing -Wno-unused-do-bind
  default-extensions:  NamedFieldPuns
                       GADTs
                       TypeFamilies
                       FlexibleContexts
  exposed-modules:     Absyn.Typed
                       Absyn.Untyped
                       Core.Absyn
                       Core.Desugar
                       Interpreter.Env
                       Interpreter.Eval
                       Reassoc.Env
                       Reassoc.Reassoc
                       Renamer.Env
                       Renamer.Renamer
                       Syntax.Lexer
                       Syntax.Parser
                       Typing.TypeChecker
                       Util.Error
                       Util.PrettyPrint

  other-modules:       Absyn.Base
                       Absyn.Meta
                       Absyn.Type
                       Absyn.ValueOccursCheck
                       Core.Match
                       Core.State
                       Interpreter.Builtin
                       Interpreter.RuntimeError
                       Interpreter.Value
                       Lib.Registry
                       Reassoc.Error
                       Renamer.Error
                       Syntax.Decl
                       Syntax.Expr
                       Syntax.Import
                       Syntax.Literal
                       Syntax.Pattern
                       Syntax.Shared
                       Syntax.Stmt
                       Syntax.Type
                       Typing.Constraint
                       Typing.Decl
                       Typing.Env
                       Typing.Expr
                       Typing.Kinds
                       Typing.Stmt
                       Typing.Substitution
                       Typing.Subtyping
                       Typing.TypeError
                       Typing.Types
                       Typing.Util
                       Typing.Variance
                       Util.Env
                       Util.Scope

  build-depends:       base >= 4.7 && < 5, parsec, mtl, containers
  default-language:    Haskell2010

executable verve
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules: Compile
                 Env
                 Options
                 Repl
                 Runners
                 TypedValue
  ghc-options:    -Wall -Werror -fwarn-incomplete-uni-patterns -fwarn-identities -Wmissing-exported-signatures -fno-warn-name-shadowing
  build-depends:  base >= 4.7 && < 5, verve, haskeline, filepath, directory, cmdargs, mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tadeuzagallo/verve
